--- a/Kenshi-DnD/Zone.xaml
+++ b/Kenshi-DnD/Zone.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
-            <Grid x:Name="PlayerInSfo" Grid.Row="0" Background="#FF8B5A2B">
+            <Grid x:Name="PlayerInfo" Grid.Row="0" Background="#FF8B5A2B">
                 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                     <Border BorderBrush="Black" BorderThickness="3" Margin="5" CornerRadius="3">
@@ -37,12 +37,14 @@
                                    Padding="10" Background="WhiteSmoke"></TextBlock>
                     </Border>
                     <Rectangle Stroke="Black" Fill="Black" Width="200"
-                               VerticalAlignment="Center" Height="5"></Rectangle>
+                               VerticalAlignment="Center" Height="3"></Rectangle>
                     <Button x:Name="SquadEditorButton" BorderBrush="Black" BorderThickness="3" Margin="5"
                      FontSize="16" Padding="10" Content="Editar escuadrón" 
                         Background="WhiteSmoke" Click="OpenSquadEditor">
                     </Button>
-                    <ComboBox x:Name="SquadAlignmentsCombobox" VerticalContentAlignment="Center"></ComboBox>
+                    <ComboBox x:Name="SquadAlignmentsCombobox" VerticalContentAlignment="Center"
+                              Margin="5" BorderBrush="Black" BorderThickness="3" SelectionChanged="ChangeSquad"
+                              ></ComboBox>
                 </StackPanel>
             </Grid>
             <StackPanel x:Name="PlayerSquad" Grid.Row="1" Orientation="Horizontal">
@@ -50,10 +52,39 @@
                 </StackPanel>
             <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
                 <Grid x:Name="SquadEditor" Visibility="Collapsed">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid x:Name="SquadEditorItems" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                        </Grid.RowDefinitions>
 
-                </Grid>
+                    </Grid>
+                    <TextBox x:Name="squadEditorTextBox"
+                          Text="" 
+                          Margin="5,20,5,2"
+                          Grid.Column="0"
+                          Grid.Row="1"
+                          TextChanged="OnlyNumsAndLetters" />
+                    <Button Content="Crear squad"
+                         Click="CreateSquad"
+                         Margin="5,20,5,2"
+                         Background="WhiteSmoke"
+                         Height="40"
+                         Grid.Column="1"
+                         Grid.Row="1" ></Button>
+                 </Grid>
             </ScrollViewer>
             
+
         </Grid>
         <Border Grid.Column="1" BorderBrush="Black"  BorderThickness="1,2,1,2" Grid.Row="1">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
