--- a/Kenshi-DnD/Zone.xaml
+++ b/Kenshi-DnD/Zone.xaml
@@ -27,14 +27,8 @@
                 <Grid.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                         <GradientStop Color="#D2B48C" Offset="0.0"/>
-                        <!-- arena, mapa -->
-
                         <GradientStop Color="#8B5A2B" Offset="0.7"/>
-                        <!-- pergamino, reliquia -->
-
                         <GradientStop Color="#5C4033" Offset="1.0"/>
-                        <!-- tesoro, sol poniente -->
-
                     </LinearGradientBrush>
                 </Grid.Background>
                 <Grid.ColumnDefinitions>
@@ -237,17 +231,70 @@
             <!-- Hospital -->
             <Grid x:Name="HospitalGrid" Visibility="Collapsed">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Grid x:Name="HospitalActions" Grid.Row="0">
-                    
-                </Grid>
 
-                <Grid x:Name="HospitalItems" Grid.Row="1">
-                    
-                </Grid>
+                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1,0,0,0">
+                    <Border.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                            <GradientStop Color="#3E3E3E" Offset="0.0"/>
+                            <GradientStop Color="#6F5F4F" Offset="0.3"/>
+                            <GradientStop Color="#A0835B" Offset="0.6"/>
+                            <GradientStop Color="#2B2B2B" Offset="1.0"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+
+                    <Grid x:Name="HospitalActions" Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <Border Grid.Row="0" BorderBrush="Black" VerticalAlignment="Top"
+BorderThickness="3" Margin="15,60,45,10" CornerRadius="2">
+                            <TextBlock Text="Mecánico de prótesis" FontSize="50" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Center"
+       Padding="20,10,20,10" Background="#80FFFFFF"/>
+                        </Border>
+
+                        <Rectangle Grid.Row="1" Stroke="Black" Fill="Black" HorizontalAlignment="Stretch"
+   Margin="15,60,45,20" Height="3"/>
+
+                        <Button x:Name="PutLimbButton" Content="¿Necesitas un parche, guerrero?" 
+Height="50" Background="#80FFFFFF"
+Grid.Row="2" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
+
+                        <ComboBox x:Name="HeroComboBox" SelectedValue="Trata a tus héroes heridos." Grid.Row="3"
+                        Height="50" Padding="15" Background="#80FFFFFF"
+                        HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
+
+                        <Button Content="Salir del lugar" Grid.Row="4"
+Height="50" Background="#80FFFFFF"
+HorizontalAlignment="Stretch" Margin="20,20,50,20"
+Click="CloseCurrentGrid"/>
+                    </Grid>
+                </Border>
+
+                <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                    <ScrollViewer.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                            <GradientStop Color="#8B7D6B" Offset="0.0"/>
+                            <GradientStop Color="#BFAE9F" Offset="0.3"/>
+                            <GradientStop Color="#D6C7B2" Offset="0.6"/>
+                            <GradientStop Color="#9C8972" Offset="1.0"/>
+                        </LinearGradientBrush>
+                    </ScrollViewer.Background>
+
+                    <Grid x:Name="HospitalItems" VerticalAlignment="Center">
+
+                    </Grid>
+                </ScrollViewer>
             </Grid>
+
 
             <!-- Tienda -->
             <Grid x:Name="ShopGrid" Visibility="Collapsed">
@@ -324,7 +371,7 @@
                 </ScrollViewer>
             </Grid>
 
-            <!-- Mercado Negro (Estilo Shinobi Thieves / Pantano Kenshi) -->
+            <!-- Mercado de contrabando -->
             <Grid x:Name="ContrabandMarketGrid" Visibility="Collapsed">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -401,8 +448,7 @@ Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
             </Grid>
 
 
-            <!-- Armas a distancia -->
-            <!-- Tienda de Armas a Distancia (Estilo Ciudades Unidas) -->
+            <!-- Galería de tiro-->
             <Grid x:Name="RangedShopGrid" Visibility="Collapsed">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -434,7 +480,7 @@ Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
 
                         <Border Grid.Row="0" BorderBrush="#667" VerticalAlignment="Top"
                 BorderThickness="2" Margin="15,60,45,10" CornerRadius="4">
-                            <TextBlock Text="Campo de tiro" FontSize="44" TextAlignment="Center"
+                            <TextBlock Text="Club privado de tiro" FontSize="44" TextAlignment="Center"
                    HorizontalAlignment="Stretch" VerticalAlignment="Center"
                    Padding="20,10,20,10" Background="#AA1A1E24" Foreground="#EEEEEE"/>
                         </Border>
@@ -445,9 +491,9 @@ Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
                         <Button x:Name="BuyRangedItemButton" Content="" Click="BuyRangedItem"
                 Height="50" Background="#55334455" Foreground="#E0E0E0"
                 Grid.Row="2" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
-                        <Button x:Name="AccessRangedShopButton" Content="Pagar entrada de 500$" Click="AccessRangedShop"
-Height="50" Background="#55334455" Foreground="#E0E0E0"
-Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
+                        <Button x:Name="AccessRangedShopButton" Content="Sobornar al segurata con 500$..." Click="AccessRangedShop"
+                        Height="50" Background="#55334455" Foreground="#E0E0E0"
+                        Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
 
                         <Button Content="Salir" Grid.Row="4" ToolTip="Luego podrás volver siempre y cuando no te salgas del juego o entres en combate."
                 Height="50" Background="#55334455" Foreground="#E0E0E0"
@@ -461,11 +507,8 @@ Grid.Row="3" HorizontalAlignment="Stretch" Margin="20,20,50,20"/>
                     <ScrollViewer.Background>
                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                             <GradientStop Color="#23272E" Offset="0.0"/>
-                            <!-- Oscuro pulido -->
                             <GradientStop Color="#3A414E" Offset="0.4"/>
-                            <!-- Intermedio acero -->
                             <GradientStop Color="#505C6C" Offset="0.8"/>
-                            <!-- Luz institucional -->
                             <GradientStop Color="#2D333C" Offset="1.0"/>
                         </LinearGradientBrush>
                     </ScrollViewer.Background>
