--- a/Kenshi-DnD/Zone.xaml
+++ b/Kenshi-DnD/Zone.xaml
@@ -22,6 +22,7 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid x:Name="PlayerInfo" Grid.Row="0">
                 <Grid.Background>
@@ -37,6 +38,7 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 
                     <Border Grid.Column="0" BorderBrush="Black" BorderThickness="3" Margin="5" CornerRadius="3">
@@ -50,11 +52,14 @@
                     </Border>
                     <Rectangle Grid.Column="2" Stroke="Black" Fill="Black" HorizontalAlignment="Stretch"
                                VerticalAlignment="Center" Height="3"></Rectangle>
-                    <Button Grid.Column="3" x:Name="SquadEditorButton" BorderBrush="Black" BorderThickness="3" Margin="5"
+                <Button Grid.Column="3" x:Name="InventoryButton" BorderBrush="Black" BorderThickness="3" Margin="5"
+                 FontSize="16" Padding="10" Content="Abrir Inventario"
+                    Background="WhiteSmoke" Click="OpenInventory"></Button>
+                <Button Grid.Column="4" x:Name="SquadEditorButton" BorderBrush="Black" BorderThickness="3" Margin="5"
                      FontSize="16" Padding="10" Content="Editar escuadrón"
                         Background="WhiteSmoke" Click="OpenSquadEditor">
                     </Button>
-                    <ComboBox Grid.Column="4" x:Name="SquadAlignmentsCombobox" VerticalContentAlignment="Center"
+                    <ComboBox Grid.Column="5" x:Name="SquadAlignmentsCombobox" VerticalContentAlignment="Center"
                               Margin="5" BorderBrush="Black" BorderThickness="3" SelectionChanged="ChangeSquad"
                               ></ComboBox>
                 
@@ -121,7 +126,24 @@
                      Grid.Row="1" ></Button>
                  </Grid>
             </ScrollViewer>
-            
+            <ScrollViewer Grid.Row="3" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                <Grid x:Name="InventoryGrid" Visibility="Collapsed">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    
+                    <UniformGrid x:Name="InventoryItems" Grid.Row="0" Grid.Column="0"
+                     Grid.ColumnSpan="3" Margin="5,10,5,2"
+                     Columns="4" />
+                    <TextBlock x:Name="InventoryItemTextblock" Grid.Column="1" Grid.Row="1"></TextBlock>
+                </Grid>
+            </ScrollViewer>
+
 
         </Grid>
         <Border Grid.Column="1" BorderBrush="Black"  BorderThickness="0,1,0,1" Grid.Row="1">
